# twist

./: .clang-format  .codecov.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  codecov.yaml  package.xml
cmake/: TestUtils.cmake
doc/: HighLevelArchitecture.puml
launch/: twist_turtlebot.launch  twist_turtlesim.launch
maps/: house_map.pgm  lfd_map.pgm  lfd_map.yaml  map.pgm  office_map.yaml
msg/: target.msg
resources/configuration/: config.toml  config_house_sim.toml  locations.toml
resources/maps/: house_map.pgm  lfd_map.pgm  my_house_map.pgm  my_house_map.yaml  office_map.pgm
resources/worlds/: office.world
script/: runHttpServer.sh
src/: CMakeLists.txt
src/application/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/business/: CMakeLists.txt
src/business/flow/: InitManager.cpp  NavigationManager.cpp  NavigationManager.h
src/business/include/business/flow/: InitManager.h
src/common/: CMakeLists.txt  Configs.cpp
src/common/include/common/: Configs.h  Logging.h  Mapping.h
test/: CMakeLists.txt
test/business/: CMakeLists.txt  InitManagerTest.cpp  InitManagerTest.launch  NavigationManagerTest.cpp  NavigationManagerTest.launch
test/common/: CMakeLists.txt  ConfigsTest.cpp  MappingTest.cpp
test/main/: CMakeLists.txt  main.cpp
web/: index.html
